src/test/deca/context/invalid/object/BadPrintx6.deca
{
    printxx("Hello 2020");
}